# arch-bundler

./: .gitignore  Cargo.toml  README.md  chmod.rs  metadata  temp.desktop
avedit.alpm/: .BUILDINFO  .MTREE  .PKGINFO
avedit.deb/DEBIAN/: control  md5sums  postrm
output/: avedit-0.1.2-1-x86_64.pkg.tar.zst  avedit_0.1.2-1_amd64.deb
pkg/: .BUILDINFO  .MTREE  .PKGINFO
src/: checksum.rs  chmod.rs  clean.rs  clone.rs  lib.rs  main.rs  metadata.rs  test.rs  unpack.rs
src/bundle/linux/: mod.rs
src/bundle/linux/alpm/: alpm.rs  build_info.rs  main.rs  mod.rs  pkg_info.rs
src/bundle/linux/appimage/: appimage.rs  mod.rs  squashfs.rs
src/bundle/linux/deb/: deb.rs  mod.rs
src/bundle/linux/rpm/: mod.rs  rpm.rs
twincan/TwinCAN/: TwinCAN.desktop
