[package]
name = "linux-bundler"
version = "0.1.0"
edition = "2024"

[dependencies]
# alpm
alpm-compress = "0.1.2"
alpm-mtree = "0.3.2"
alpm-package = "0.4.1"
alpm-buildinfo = "0.5.2"
alpm-pkginfo = "0.6.1"
alpm-types = "0.11.1"

# compression
bzip2 = "0.6.1"
flate2 = "1.1.9"
tar = "0.4.44"
liblzma = "0.4.6"
zstd = "0.13.3"
ar = "0.9.0"

# checksum
blake2 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"
md-5 = "0.10.6"
sha1 = "0.10.6"

# network
reqwest = { version = "0.13.2", features = ["stream"] }
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.32"
walkdir = "2.5.0"
backhand = "0.25.0"

rpm = "0.19.0"
time = { version = "0.3.47", features = ["macros"] }
